@@ -1,4 +1,4 @@
-Copyright (c) 2024 Michal Josef Špaček
+Copyright (c) 2024-2025 Michal Josef Špaček
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
